# data-sheets-schema

./: .cruft.json  .gitignore  .gitmodules  .goosehints  404.html  ASSISTANT_PR_STATUS.md  CLAUDE.md  D4D_AI_READINESS_GAP_ANALYSIS.md  D4D_COMPLETE_STATUS.md  D4D_EXTRACTION_STATUS.md  D4D_RERUN_SUMMARY.md  D4D_SESSION_SUMMARY_2025-11-08.md  DESCRIPTION_STYLE_GUIDE.md  DETERMINISM.md  ENHANCED_EXTRACTION_SUMMARY.md  FINAL_SESSION_SUMMARY.md  HTML_GENERATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PHASE3_TESTING_RESULTS.md  PROPOSED_DATA_STRUCTURE.md  README.md  RUBRIC10_EVALUATION_PROMPT_FINAL.md  RUBRIC10_UPDATED_PROMPT.md  SEMANTIC_EXCHANGE_IMPLEMENTATION.md  TASK_SUMMARY.md  TEST_ISSUE_SUMMARY.md  VERIFICATION_GUIDE.md  VOICE_D4D_GENERATION_SUMMARY.md  about.yaml  analyze_property_distribution.py  check_description_quality.py  check_missing_descriptions.py  concat_all_by_column.py  concat_tabs_by_source.py  data-stat.out  fix_yaml_debug_files.py  index.html  mkdocs.yml  organize_extracted_files.py  (+8 more)
.claude/: settings.json
.claude.bak.1763165170/: settings.json  settings.local.json
.github/: D4D_ASSISTANT_README.md  ai-controllers.json
AIActRiskEnum/: index.html
AddressingGap/: index.html
AnatomicalEntity/: index.html
AnnotationAnalysis/: index.html
AtRiskPopulations/: index.html
BiasTypeEnum/: index.html
Boolean/: index.html
CRediTRoleEnum/: index.html
CategoryType/: index.html
CleaningStrategy/: index.html
Collection/: index.html
CollectionConsent/: index.html
CollectionMechanism/: index.html
CollectionNotification/: index.html
(+2930 files in other folders)
