[tool.poetry]
name = "data_sheets_schema"
version = "0.1.0"
description = "A LinkML schema for Datasheets for Datasets."
authors = ["My Name <MJoachimiak@lbl.gov>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/data_sheets_schema/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"
pyyaml = "^6.0.2"
jinja2 = "^3.1.6"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.4.0"
schema-automator= "0.5.4rc1" 

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]
